fixed extra overflow x axis scroll

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@ html, root {
 
  height: 100% ;
  background-color: white;
+ overflow-x: hidden;
 }
 
 .header {
@@ -28,12 +29,12 @@ html, root {
  * Remove the margin in all browsers.
  */
 body {
-  margin: 0;
   font-family: "Darker Grotesque", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 p {
